2004-02-23 04:02  sisoft

	* Changes, configure.in, qico.conf.sample, debian/copyright,
	src/binkp.c, src/config.c, src/flaglex.l:

	add short aliases for weekdays (su,mo,tu...).
	add aliases 'or','no[t]','xor','and' for same symbols (|!^&).
	add support for multiline breaking (line must end on " \").
	
2004-02-23 00:33  sisoft

	* Changes, TODO, qico.conf.sample, src/binkp.c, src/config.c,
	src/emsi.c, src/ftn.h, src/qcc.c, src/session.c, src/xmem.h:

	in qcc: fix crash on terminals wider 127 columns.
	fix unnecessary error '..too slow'.
	fix domains in binkp.
	add domain parts to addresses in emsi.
	truncate Changes file.
	TODO removed, as unusable.
	
2004-02-20 02:36  sisoft

	* Changes, FAQ, configure.in, qico.conf.sample, src/binkp.h,
	src/config.c, src/daemon.c, src/defs.h, src/flaglex.l, src/main.c,
	src/tools.h:

	fix config dumping.
	add keyword 'else'.
	add support for inline if-expressions.
	add alias 'addr' for expression 'address'.
	
2004-02-17 14:23  sisoft

	* src/: call.c, emsi.c, flagexp.y, flaglex.l:

	try to fix emsi.
	
2004-02-15 04:22  sisoft

	* Changes, qico.conf.sample, src/config.c, src/flagexp.y,
	src/flaglex.l, src/tools.c:

	fix some if-expressions.
	check expressions syntax on config read.
	change syntax of if-expression 'sfree'.
	
2004-02-14 18:58  sisoft

	* Changes, src/binkp.c, src/hydra.c, src/log.c, src/protfm.c,
	src/qcc.c:

	fix binkp session closing with opened chat.
	in qcc: split input history into groups.
	
2004-02-14 14:55  sisoft

	* src/tools.c:

	fix segfault on session begin.
	
2004-02-14 01:29  sisoft

	* FAQ, README, src/Makefile.am, src/binkp.c, src/binkp.h,
	src/byteop.h, src/clserv.c, src/clserv.h, src/crc.c, src/crc.h,
	src/daemon.c, src/defs.h, src/emsi.c, src/ftn.c, src/ftn.h,
	src/globals.c, src/globals.h, src/headers.h, src/hydra.c,
	src/janus.c, src/ls_zglue.c, src/ls_zmodem.c, src/ls_zreceive.c,
	src/ls_zsend.c, src/mailer.h, src/main.c, src/md5.c, src/opts.h,